# Rosella

./: .gitmodules  CMakeLists.txt  LICENCE.md  LICENSE  README.md  setup.sh
Rosella/: main.cpp
Rosella/AST/: AST.h
Rosella/AST/Base/: ASTNodeBase.cpp  ASTNodeBase.h  ASTNodeIdent.cpp  ASTNodeIdent.h  ASTNodeList.cpp  ASTNodeList.h  ASTNodeToken.cpp  ASTNodeToken.h
Rosella/AST/Expressions/: ASTEnumerator.cpp  ASTEnumerator.h  ASTExpression.cpp  ASTExpression.h  ASTExpressionAdd.h  ASTExpressionArgumentList.h  ASTExpressionAssignment.h  ASTExpressionDiv.h  ASTExpressionMul.h  ASTExpressionPrimary.cpp  ASTExpressionPrimary.h  ASTExpressionSub.h
Rosella/AST/Functions/: ASTFunction.h  ASTFunctionDefinition.h
Rosella/AST/Literals/: ASTLiteralFloat.cpp  ASTLiteralFloat.h  ASTLiteralInteger.cpp  ASTLiteralInteger.h
Rosella/AST/Operators/: ASTOperator.cpp  ASTOperator.h  ASTOperatorAssignment.cpp  ASTOperatorAssignment.h  ASTOperatorUnary.cpp  ASTOperatorUnary.h
Rosella/AST/Other/: ASTCodeBlock.h
Rosella/AST/Program/: ASTObject.h
Rosella/AST/Statements/: ASTStatement.h  ASTStatementExpression.h  ASTStatementList.h
Rosella/AST/Type/: ASTNodeType.cpp  ASTNodeType.h
Rosella/Lexer/: Lexer.cpp  Lexer.h  TokenData.h  Tokens.h
Rosella/Lexer/LexDef/: README.md  RosellaFlexOutput.c  RosellaFlexOutput.h  RosellaLexDef.l
Rosella/Parser/ParDef/: README.md  RosellaGrammarDef.y  RosellaParDef.y
Rosella/Platform/: RosellaTypes.h
Rosella/Utilities/: Error.cpp  Error.h  Log.cpp  Log.h  Utilities.h
